// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Side bar component should hide the people tab for WCS 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="tabs"
      >
        <ul>
          <li>
            <a
              class="tab tab__active"
              href="/undefined/?activeTab=DOCUMENTS"
            >
              Documents
            </a>
          </li>
          <li>
            <a
              class="tab"
              href="/undefined/?activeTab=SUMMARY"
            >
              Summary
            </a>
          </li>
          <li>
            <a
              class="tab"
              href="/undefined/?activeTab=TIMELINE"
            >
              Timeline
            </a>
          </li>
        </ul>
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-full"
          >
            <a
              class="govuk-body govuk-link"
              href="/case/some_case_id/stage/some_stage_id/entity/document/manage"
            >
              Manage Documents
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="tabs"
    >
      <ul>
        <li>
          <a
            class="tab tab__active"
            href="/undefined/?activeTab=DOCUMENTS"
          >
            Documents
          </a>
        </li>
        <li>
          <a
            class="tab"
            href="/undefined/?activeTab=SUMMARY"
          >
            Summary
          </a>
        </li>
        <li>
          <a
            class="tab"
            href="/undefined/?activeTab=TIMELINE"
          >
            Timeline
          </a>
        </li>
      </ul>
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-full"
        >
          <a
            class="govuk-body govuk-link"
            href="/case/some_case_id/stage/some_stage_id/entity/document/manage"
          >
            Manage Documents
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Side bar component should render with default props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="tabs"
      >
        <ul>
          <li>
            <a
              class="tab tab__active"
              href="/undefined/?activeTab=DOCUMENTS"
            >
              Documents
            </a>
          </li>
          <li>
            <a
              class="tab"
              href="/undefined/?activeTab=SUMMARY"
            >
              Summary
            </a>
          </li>
          <li>
            <a
              class="tab"
              href="/undefined/?activeTab=TIMELINE"
            >
              Timeline
            </a>
          </li>
          <li>
            <a
              class="tab"
              href="/undefined/?activeTab=PEOPLE"
            >
              People
            </a>
          </li>
        </ul>
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-full"
          >
            <a
              class="govuk-body govuk-link"
              href="/case/some_case_id/stage/some_stage_id/entity/document/manage"
            >
              Manage Documents
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="tabs"
    >
      <ul>
        <li>
          <a
            class="tab tab__active"
            href="/undefined/?activeTab=DOCUMENTS"
          >
            Documents
          </a>
        </li>
        <li>
          <a
            class="tab"
            href="/undefined/?activeTab=SUMMARY"
          >
            Summary
          </a>
        </li>
        <li>
          <a
            class="tab"
            href="/undefined/?activeTab=TIMELINE"
          >
            Timeline
          </a>
        </li>
        <li>
          <a
            class="tab"
            href="/undefined/?activeTab=PEOPLE"
          >
            People
          </a>
        </li>
      </ul>
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-full"
        >
          <a
            class="govuk-body govuk-link"
            href="/case/some_case_id/stage/some_stage_id/entity/document/manage"
          >
            Manage Documents
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Side bar component should render with the actions tab for FOI 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="tabs"
      >
        <ul>
          <li>
            <a
              class="tab tab__active"
              href="/undefined/?activeTab=DOCUMENTS"
            >
              Documents
            </a>
          </li>
          <li>
            <a
              class="tab"
              href="/undefined/?activeTab=SUMMARY"
            >
              Summary
            </a>
          </li>
          <li>
            <a
              class="tab"
              href="/undefined/?activeTab=TIMELINE"
            >
              Timeline
            </a>
          </li>
          <li>
            <a
              class="tab"
              href="/undefined/?activeTab=CASE_ACTIONS"
            >
              Actions
            </a>
          </li>
        </ul>
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-full"
          >
            <a
              class="govuk-body govuk-link"
              href="/case/some_case_id/stage/some_stage_id/entity/document/manage"
            >
              Manage Documents
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="tabs"
    >
      <ul>
        <li>
          <a
            class="tab tab__active"
            href="/undefined/?activeTab=DOCUMENTS"
          >
            Documents
          </a>
        </li>
        <li>
          <a
            class="tab"
            href="/undefined/?activeTab=SUMMARY"
          >
            Summary
          </a>
        </li>
        <li>
          <a
            class="tab"
            href="/undefined/?activeTab=TIMELINE"
          >
            Timeline
          </a>
        </li>
        <li>
          <a
            class="tab"
            href="/undefined/?activeTab=CASE_ACTIONS"
          >
            Actions
          </a>
        </li>
      </ul>
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-full"
        >
          <a
            class="govuk-body govuk-link"
            href="/case/some_case_id/stage/some_stage_id/entity/document/manage"
          >
            Manage Documents
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Side bar component should render with the defined BF tabs 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="tabs"
      >
        <ul>
          <li>
            <a
              class="tab tab__active"
              href="/undefined/?activeTab=DOCUMENTS"
            >
              Documents
            </a>
          </li>
          <li>
            <a
              class="tab"
              href="/undefined/?activeTab=SUMMARY"
            >
              Summary
            </a>
          </li>
          <li>
            <a
              class="tab"
              href="/undefined/?activeTab=TIMELINE"
            >
              Timeline
            </a>
          </li>
          <li>
            <a
              class="tab"
              href="/undefined/?activeTab=PEOPLE"
            >
              People
            </a>
          </li>
          <li>
            <a
              class="tab"
              href="/undefined/?activeTab=CASE_ACTIONS"
            >
              Actions
            </a>
          </li>
          <li>
            <a
              class="tab"
              href="/undefined/?activeTab=EX_GRATIA"
            >
              Ex-Gratia
            </a>
          </li>
        </ul>
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-full"
          >
            <a
              class="govuk-body govuk-link"
              href="/case/some_case_id/stage/some_stage_id/entity/document/manage"
            >
              Manage Documents
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="tabs"
    >
      <ul>
        <li>
          <a
            class="tab tab__active"
            href="/undefined/?activeTab=DOCUMENTS"
          >
            Documents
          </a>
        </li>
        <li>
          <a
            class="tab"
            href="/undefined/?activeTab=SUMMARY"
          >
            Summary
          </a>
        </li>
        <li>
          <a
            class="tab"
            href="/undefined/?activeTab=TIMELINE"
          >
            Timeline
          </a>
        </li>
        <li>
          <a
            class="tab"
            href="/undefined/?activeTab=PEOPLE"
          >
            People
          </a>
        </li>
        <li>
          <a
            class="tab"
            href="/undefined/?activeTab=CASE_ACTIONS"
          >
            Actions
          </a>
        </li>
        <li>
          <a
            class="tab"
            href="/undefined/?activeTab=EX_GRATIA"
          >
            Ex-Gratia
          </a>
        </li>
      </ul>
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-full"
        >
          <a
            class="govuk-body govuk-link"
            href="/case/some_case_id/stage/some_stage_id/entity/document/manage"
          >
            Manage Documents
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
